arreglo del proyecto